# Demeter

./: .gitignore  .gitmodules  README.md  brew_packages.txt  notes.txt  restore.sh
.github/workflows/: test.yaml
ascii/: bd-color.ascii
astrovim/: init.lua
backup/: .p10k.zsh  .zprofile  .zshenv  .zshrc
backup/.config/: .gitignore  Brewfile-Darwin  RectangleConfig.json  chromium-flags.conf  sew.toml  starship.toml
backup/.config/CMakeTools/: cmake-tools-kits.json  log.txt
backup/.config/JetBrains/: .gitignore
backup/.config/SEGGER/: SEGGER_REG_HKEY_CURRENT_USER.xml
backup/.config/alacritty/: alacritty.toml  alacritty.yml
backup/.config/buildkit/: buildkitd.toml  ertis.ca
backup/.config/configstore/: update-notifier-npm-check-updates.json  update-notifier-vercel.json
backup/.config/ghostty/: config
backup/.config/gobang/: config.toml
backup/.config/gtk-2.0/: gtkfilechooser.ini
backup/.config/helix/: config.toml  languages.toml
backup/.config/helm/: repositories.yaml
backup/.config/htop/: htoprc
backup/.config/iterm2/: com.googlecode.iterm2.plist
backup/.config/macchina/: macchina.toml
backup/.config/rstudio/: rstudio-prefs.json
backup/.config/ruff/: ruff-receipt.json
iterm2/: com.googlecode.iterm2.plist
keyboard/: keychron_k6_pro.layout.json
linux/: .gitconfig
macOS/: .Brewfile  .gitconfig
scripts/: convert  demeter  drun  kforward  kns  kselect  recast  sew  socksproxy  sysupgrade  sysupgrade.make  sysupgrade.py  sysupgrade.runner  takeout
scripts/pyscripts/: README.md  pyproject.toml
scripts/pyscripts/src/: convert.py
(+11 files in other folders)
